# hdl-eval-rs

./: README.md
rhdl-bsp-ice-stick/: Cargo.toml
rhdl-bsp-ice-stick/src/: drivers.rs  lib.rs  synth.rs
rhdl-eval/: .gitignore  Cargo.toml
rhdl-eval/src/: basic_sim.rs  fpga.rs  ice_stick_synth.rs  leds.rs  lib.rs  main.rs  testing_sim.rs
rhdl-eval/src/fpga/: led.rs  mod.rs
rhdl-eval/src/sim/: mod.rs  testing_sim.rs
rust-hdl-bsp-ice-stick/: Cargo.toml
rust-hdl-bsp-ice-stick/src/: lib.rs  pins.rs  synth.rs
rust-hdl-bsp-ice40-boards/: Cargo.toml
rust-hdl-bsp-ice40-boards/src/: chip_types.rs  lib.rs  pins.rs  synth.rs
rust-hdl-eval/: .gitignore  Cargo.toml
rust-hdl-eval/src/: adder_sim.rs  circuits.rs  fpga.rs  ice_stick_synth.rs  lib.rs  main.rs  testing_sim.rs
rust-hdl-eval/src/fpga/: arithmetic.rs  leds.rs  mod.rs
rust-hdl-eval/src/sim/: adder_sim.rs  basic_sim.rs  testing_sim.rs
rusthdl-eval/: .gitignore  Cargo.toml
rusthdl-eval/simulations/: project_simulation.vcd
rusthdl-eval/src/: adder_sim.rs  basic_sim.rs  circuits.rs  lib.rs  main.rs  modes.rs  project_sim.rs  testing_sim.rs
